<resources>
    <string name="app_name">Spiice</string>
    <string name="splash_screen_sing_up_button">Discover the platform</string>
    <string name="splash_screen_log_in_button">You have an account ? Log-in</string>
    <string name="log_in_screen_title">Log-in</string>
    <string name="log_in_screen_button">Log-in</string>
    <string name="return_to_sign_up_button">Return to Sign-up</string>
    <string name="sign_up_screen_title">Sign-up</string>
    <string name="first_name_field">First name</string>
    <string name="last_name_field">Last name</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="sign_up_button">Sign-up</string>
    <string name="back_to_log_in">You have an account ? Log-in</string>
    <string name="error_message_empty_field">Field is required!</string>
    <string name="error_message_name">Length must be from 3 to 255</string>
    <string name="error_message_email">Invalid email!</string>
    <string name="error_message_password">length must be from 6 to 50, at least one capital and small letter, number, sign</string>
    <string name="add_note_button">Add</string>
    <string name="add_note_title">Add note</string>
    <string name="add_note_title_edit_text">Title</string>
    <string name="add_note_message">Message</string>
    <string name="add_note_toolbar_title">Back</string>
    <string name="note_toolbar_title">Logout</string>
    <string name="notes_list_menu_add_new">Add new</string>
    <string name="data_picker_title">Select start date</string>
    <string name="add_note_checkbox">Make it planned</string>
    <string name="scheduled_for_TV">Scheduled for:</string>
    <string name="onboarding_ex">Skip</string>
    <string name="onb_text_1">Find projects from companies everywhere in the word</string>
    <string name="onb_text_2">Work hard and level up!</string>
    <string name="onb_text_3">Enjoy your progress!</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="all_notes_title">All Notes</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="logout">Logout</string>
    <string name="user_notes">%1$d notes</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">Cancel</string>
    <string name="delete_account_title">Delete account</string>
    <string name="delete_notes_title">Delete notes</string>
    <string name="delete_account_message">Do you really want to delete your account? All data will be lost</string>
    <string name="delete_notes_message">All notes will be deleted</string>
    <string name="home_menu">Home</string>
    <string name="search_menu">Search</string>
    <string name="new_note_menu">New note</string>
    <string name="profile_menu">Profile</string>
    <string name="note_created_message">Note was created</string>

</resources>