<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_page"
        android:icon="@drawable/home_icon"
        android:orderInCategory="1"
        android:title="@string/home_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search_page"
        android:icon="@drawable/search_icon"
        android:orderInCategory="2"
        android:title="@string/search_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_note_page"
        android:icon="@drawable/message_icon"
        android:orderInCategory="3"
        android:title="@string/new_note_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile_page"
        android:icon="@drawable/profile_icon"
        android:orderInCategory="4"
        android:title="@string/profile_menu"
        app:showAsAction="ifRoom" />

</menu>