<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles_splash_background"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/splash_screen_text"
        android:layout_width="@dimen/splash_title_wight"
        android:layout_height="@dimen/splash_title_height"
        android:layout_marginTop="@dimen/splash_title_marginTop"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/SplashTitleStyle"/>

    <Button
        android:id="@+id/splash_screen_sing_up_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/splash_button_marginTop"
        android:text="@string/splash_screen_sing_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_screen_text"
        style="@style/ButtonStyle"/>

    <TextView
        android:id="@+id/login_from_splash_screen_button"
        style="@style/BackToLogInButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/account_back_marginTop"
        android:text="@string/splash_screen_log_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_screen_sing_up_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>