<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/notes_background"
    tools:context=".ui.profileScreen.ProfileFragment">

    <TextView
        android:id="@+id/title_profile"
        style="@style/AddNoteTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dm_30"
        android:layout_marginTop="@dimen/dm_30"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name"
        style="@style/NoteTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dm_30"
        android:layout_marginTop="@dimen/dm_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_profile"
        tools:text="Dustin Warren" />

    <TextView
        android:id="@+id/user_notes"
        style="@style/NoteTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dm_30"
        android:layout_marginTop="@dimen/dm_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        tools:text="64 notes" />

    <TextView
        android:id="@+id/logout"
        style="@style/ToolbarTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dm_30"
        android:layout_marginTop="@dimen/dm_20"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_notes" />

    <TextView
        android:id="@+id/delete_account"
        style="@style/ToolbarTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm_20"
        android:layout_marginEnd="@dimen/dm_30"
        android:text="@string/delete_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_profile" />

    <TextView
        android:id="@+id/delete_notes"
        style="@style/ToolbarTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dm_20"
        android:layout_marginEnd="@dimen/dm_30"
        android:text="@string/delete_all_notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_account" />

</androidx.constraintlayout.widget.ConstraintLayout>