<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/notes_background"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.addNoteScreen.AddNoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_note_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/add_note_screen_toolbar"
            style="@style/ToolbarStyle"
            android:background="@color/notes_background"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/add_note_screen_back"
            app:title="@string/add_note_toolbar_title" />

        <TextView
            android:id="@+id/title_add_note"
            style="@style/AddNoteTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/add_note_title_title_marginStart"
            android:layout_marginTop="@dimen/add_note_title_title_marginTop"
            android:text="@string/add_note_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="@dimen/zero_size"
            android:layout_height="@dimen/zero_size"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="title_add_note" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dm_16"
            app:layout_constraintTop_toBottomOf="@+id/barrier" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_title_layout_add_screen"
            style="@style/TextInputLayoutStyle"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_title_add_screen"
                style="@style/InputFieldStyle"
                android:hint="@string/add_note_title_edit_text"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_description_layout_add_screen"
            style="@style/TextInputLayoutStyle"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_title_layout_add_screen">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_description_add_screen"
                style="@style/AddNoteMessageStyle"
                android:hint="@string/add_note_message"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/check_box_add_screen"
            style="@style/CheckBoxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_note_checkbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_description_layout_add_screen" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/note_start_data_add_screen"
            style="@style/TextVIewFieldStyle"
            android:visibility="gone"
            app:drawableEndCompat="@drawable/start_note_calendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_box_add_screen"
            tools:text="12,September 2024" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_note_button"
            style="@style/ButtonStyle"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_note_button_marginTop"
            android:enabled="false"
            android:text="@string/add_note_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_description_layout_add_screen" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>